# Orpheus

./: .gitignore  .gitmodules  BaseStationAppVeyorConfig.yml  Install Dependencies.ps1  Install Dependencies.sh  README.md
Arm/: .gitignore  Arm.cs  ArmVisualizer.cs
Arm/ArmBaseStation/: Arm.sln
ArmInterface/: ArmInterface.sln
Base Station/: .gitignore  README.md
BaseStation/: .gitignore  BaseStation.sln  README.md
Rover/: BasicNav.cpp  Map.cpp  Map.h  README.md  TestMap.cpp  a.out  simpleCalc.cpp
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/: CMakeLists.txt  README.md  todo.org
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/data/final_models/: graph.pbtxt
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/data/testing/: testing.csv  testing_shuffled.csv
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/data/training/: training.csv  training_shuffled.csv
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/scripts/: csvshuffle.py  export_models.sh  generate_tfrecords.py  install_models.sh  make_tfrecords.sh  model_main.py  run_training.sh  shuffle_data.sh
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/src/: detector.cpp  detector.hpp  live_video.cpp  still_image.cpp  test.cpp
Rover/RoutePlanning/RobotSim/RobotSim/Tennisball/training/: object-detection.pbtxt  pipeline.config
Science/: .editorconfig  .gitignore  README.md  Science.sln
Scripts/: BUILD_OPENCV_4.0.1.sh  enable_can.sh  set_static_ip.sh  setup_ricoh.sh  startup.bat  upload.sh
UI/: .gitignore  README.md  UI Components.sln  designNotes.txt
science/: .gitignore  README.md  Science.sln
(+1555 files in other folders)
